--- a/app-text/gnome-doc-utils/ChangeLog
+++ b/app-text/gnome-doc-utils/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-text/gnome-doc-utils
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/gnome-doc-utils/ChangeLog,v 1.97 2008/03/09 22:44:13 leio Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/gnome-doc-utils/ChangeLog,v 1.98 2008/03/10 21:25:18 eva Exp $
+
+*gnome-doc-utils-0.12.2 (10 Mar 2008)
+
+  10 Mar 2008; Gilles Dartiguelongue <eva@gentoo.org>
+  -gnome-doc-utils-0.6.1.ebuild, +gnome-doc-utils-0.12.2.ebuild:
+  bump to 0.12.2, updated translations, added DOCTYPE to (X)HTML
 
   09 Mar 2008; Mart Raudsepp <leio@gentoo.org> gnome-doc-utils-0.6.1.ebuild,
   -gnome-doc-utils-0.8.0.ebuild, gnome-doc-utils-0.10.3.ebuild,
