--- a/media-libs/libvorbis/ChangeLog
+++ b/media-libs/libvorbis/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libvorbis
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libvorbis/ChangeLog,v 1.91 2007/09/26 14:00:59 armin76 Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libvorbis/ChangeLog,v 1.92 2008/03/10 21:37:59 lu_zero Exp $
+
+  10 Mar 2008; Luca Barbato <lu_zero@gentoo.org> libvorbis-1.2.0.ebuild:
+  Remove more insanity
 
   26 Sep 2007; Raúl Porcel <armin76@gentoo.org> libvorbis-1.2.0.ebuild:
   sparc stable wrt security #186716
