--- a/gnome-extra/evolution-data-server/ChangeLog
+++ b/gnome-extra/evolution-data-server/ChangeLog
@@ -1,6 +1,16 @@
 # ChangeLog for gnome-extra/evolution-data-server
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/evolution-data-server/ChangeLog,v 1.171 2008/02/04 04:34:35 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/evolution-data-server/ChangeLog,v 1.172 2008/03/10 21:41:08 leio Exp $
+
+  10 Mar 2008; Mart Raudsepp <leio@gentoo.org>
+  -files/evolution-data-server-1.7.3-libdb.patch,
+  -files/evolution-data-server-1.9.91-as-needed.patch,
+  -files/evolution-data-server-1.10-fix-maildir-account.patch,
+  -files/evolution-data-server-1.10-newline-in-contacts.patch,
+  -files/evolution-data-server-1.12.2-local-delivery.patch,
+  -evolution-data-server-1.10.3.1.ebuild,
+  -evolution-data-server-1.12.2-r1.ebuild:
+  Remove GNOME 2.18 version
 
   04 Feb 2008; Jeroen Roovers <jer@gentoo.org>
   evolution-data-server-1.12.3.ebuild:
