--- a/www-client/epiphany/ChangeLog
+++ b/www-client/epiphany/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for www-client/epiphany
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/epiphany/ChangeLog,v 1.149 2008/02/04 04:08:45 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/epiphany/ChangeLog,v 1.150 2008/03/10 21:48:02 leio Exp $
+
+  10 Mar 2008; Mart Raudsepp <leio@gentoo.org>
+  -files/epiphany-1.9.2-broken-firefox.patch, -epiphany-2.18.3.ebuild,
+  -epiphany-2.20.1.ebuild, -epiphany-2.20.2.ebuild:
+  Remove old
 
   04 Feb 2008; Jeroen Roovers <jer@gentoo.org> epiphany-2.20.3.ebuild:
   Stable for HPPA (bug #208366).
