--- a/app-misc/strigi/ChangeLog
+++ b/app-misc/strigi/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-misc/strigi
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/strigi/ChangeLog,v 1.1 2008/01/13 18:18:23 philantrop Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/strigi/ChangeLog,v 1.2 2008/03/10 21:49:04 zlin Exp $
+
+*strigi-0.5.8 (10 Mar 2008)
+
+  10 Mar 2008; Bo Ørsted Andresen <zlin@gentoo.org> strigi-0.5.7.ebuild,
+  +strigi-0.5.8.ebuild:
+  Bump to 0.5.8. Add support for split qt 4.4.
 
 *strigi-0.5.7 (13 Jan 2008)
 
