--- a/dev-util/buildbot/ChangeLog
+++ b/dev-util/buildbot/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/buildbot
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/buildbot/ChangeLog,v 1.16 2008/02/27 12:39:38 dev-zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/buildbot/ChangeLog,v 1.17 2008/03/10 21:49:48 jokey Exp $
+
+  10 Mar 2008; Markus Ullmann <jokey@gentoo.org> buildbot-0.7.6.ebuild:
+  Fix epydoc dep
 
 *buildbot-0.7.6 (27 Feb 2008)
 
