--- a/www-servers/lighttpd/ChangeLog
+++ b/www-servers/lighttpd/ChangeLog
@@ -1,6 +1,17 @@
 # ChangeLog for www-servers/lighttpd
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-servers/lighttpd/ChangeLog,v 1.164 2008/03/04 18:51:30 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-servers/lighttpd/ChangeLog,v 1.165 2008/03/10 22:12:20 bangert Exp $
+
+*lighttpd-1.4.18-r3 (10 Mar 2008)
+
+  10 Mar 2008; Thilo Bangert <bangert@gentoo.org>
+  +files/1.4.18-r3/03_all_lighttpd-1.4.11-errorlog-pipe.diff,
+  +files/1.4.18-r3/04_all_lighttpd-1.4.13-deprecated-ldap-api.diff,
+  +files/1.4.18-r3/06_all_lighttpd-1.4.18-mod_cgi_source_disclosure-changese
+  t-211956.diff, +files/1.4.18-r3/05_all_lighttpd-fix-DoS.diff,
+  +files/1.4.18-r3/07_all_lighttpd-1.4.18-mod_userdir-information_disclosure
+  .diff, +lighttpd-1.4.18-r3.ebuild:
+  bump for security bug #212930
 
   04 Mar 2008; Tobias Scherbaum <dertobi123@gentoo.org>
   lighttpd-1.4.18-r2.ebuild:
