--- a/dev-texlive/texlive-context/ChangeLog
+++ b/dev-texlive/texlive-context/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-texlive/texlive-context
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-texlive/texlive-context/ChangeLog,v 1.9 2008/02/10 16:30:26 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-texlive/texlive-context/ChangeLog,v 1.10 2008/03/10 22:20:54 aballier Exp $
+
+  10 Mar 2008; Alexis Ballier <aballier@gentoo.org>
+  texlive-context-2007.ebuild:
+  ruby is needed for context, not for all texlive
 
   10 Feb 2008; Alexis Ballier <aballier@gentoo.org>
   texlive-context-2007.ebuild:
