--- a/app-text/texlive-core/ChangeLog
+++ b/app-text/texlive-core/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-text/texlive-core
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/texlive-core/ChangeLog,v 1.46 2008/03/02 11:09:07 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/texlive-core/ChangeLog,v 1.47 2008/03/10 22:22:17 aballier Exp $
+
+  10 Mar 2008; Alexis Ballier <aballier@gentoo.org>
+  texlive-core-2007-r12.ebuild:
+  ruby is needed for context, not for all texlive
 
   02 Mar 2008; Alexis Ballier <aballier@gentoo.org>
   texlive-core-2007-r12.ebuild:
