--- a/app-text/texlive-core/ChangeLog
+++ b/app-text/texlive-core/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-text/texlive-core
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/texlive-core/ChangeLog,v 1.47 2008/03/10 22:22:17 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/texlive-core/ChangeLog,v 1.48 2008/03/10 22:33:02 aballier Exp $
+
+  10 Mar 2008; Alexis Ballier <aballier@gentoo.org>
+  texlive-core-2007-r12.ebuild:
+  unzip is not a runtime dep, only a build dep
 
   10 Mar 2008; Alexis Ballier <aballier@gentoo.org>
   texlive-core-2007-r12.ebuild:
