--- a/gnome-base/gnome-light/ChangeLog
+++ b/gnome-base/gnome-light/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/gnome-light
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-light/ChangeLog,v 1.85 2008/02/04 04:55:59 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-light/ChangeLog,v 1.86 2008/03/10 22:31:28 leio Exp $
+
+  10 Mar 2008; Mart Raudsepp <leio@gentoo.org> ChangeLog:
+  Remove GNOME 2.18
 
   04 Feb 2008; Jeroen Roovers <jer@gentoo.org> gnome-light-2.20.3.ebuild:
   Stable for HPPA (bug #208366).
