--- a/x11-libs/goffice/ChangeLog
+++ b/x11-libs/goffice/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-libs/goffice
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/goffice/ChangeLog,v 1.34 2008/01/16 22:48:54 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/goffice/ChangeLog,v 1.35 2008/03/10 23:05:43 eva Exp $
+
+*goffice-0.6.2 (10 Mar 2008)
+
+  10 Mar 2008; Gilles Dartiguelongue <eva@gentoo.org>
+  +files/goffice-0.6-doc-slot.patch, +goffice-0.6.2.ebuild:
+  bump to 0.6.2 and fix documentation slotting issue
 
   16 Jan 2008; Gilles Dartiguelongue <eva@gentoo.org> goffice-0.6.1.ebuild:
   remove libgnomeprint{,ui} dependencies (bug #206095)
