--- a/x11-misc/alacarte/ChangeLog
+++ b/x11-misc/alacarte/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-misc/alacarte
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/alacarte/ChangeLog,v 1.45 2008/02/18 00:23:09 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/alacarte/ChangeLog,v 1.46 2008/03/10 23:55:43 eva Exp $
+
+*alacarte-0.11.5 (10 Mar 2008)
+
+  10 Mar 2008; Gilles Dartiguelongue <eva@gentoo.org>
+  +alacarte-0.11.5.ebuild:
+  bump to 0.11.5, updated translation and fixed one crash
 
 *alacarte-0.11.4 (18 Feb 2008)
 
