Post-bump fix kindly provided by jmbsvicetto to fix bug 206877. Package-Manager: portage-2.1.4.4

--- a/kde-base/kopete/ChangeLog
+++ b/kde-base/kopete/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kopete
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kopete/ChangeLog,v 1.141 2008/03/10 23:48:22 philantrop Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kopete/ChangeLog,v 1.142 2008/03/11 00:10:58 philantrop Exp $
+
+  11 Mar 2008; Wulf C. Krueger <philantrop@gentoo.org> kopete-4.0.2.ebuild:
+  Post-bump fix kindly provided by jmbsvicetto to fix bug 206877.
 
 *kopete-4.0.2 (10 Mar 2008)
 
