--- a/dev-java/msv/ChangeLog
+++ b/dev-java/msv/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/msv
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/msv/ChangeLog,v 1.19 2007/10/24 05:42:09 wltjr Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/msv/ChangeLog,v 1.20 2008/03/11 00:40:55 betelgeuse Exp $
+
+*msv-20050627-r2 (11 Mar 2008)
+
+  11 Mar 2008; Petteri Räty <betelgeuse@gentoo.org>
+  +files/build-20050627-r2.xml, +msv-20050627-r2.ebuild:
+  .properties files were missing from installed jars
 
   24 Oct 2007; William L. Thomson Jr. <wltjr@gentoo.org>
   -msv-20050627.ebuild:
