--- a/dev-java/dom4j/ChangeLog
+++ b/dev-java/dom4j/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/dom4j
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/dom4j/ChangeLog,v 1.43 2008/01/19 07:43:53 ali_bush Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/dom4j/ChangeLog,v 1.44 2008/03/11 02:17:19 betelgeuse Exp $
+
+*dom4j-1.6.1-r3 (11 Mar 2008)
+
+  11 Mar 2008; Petteri Räty <betelgeuse@gentoo.org> +dom4j-1.6.1-r3.ebuild:
+  Prepare for upcoming generic src_test and use system copy of
+  xml-commons-external.
 
   19 Jan 2008; Alistair Bush <ali_bush@gentoo.org> dom4j-1.6.1-r2.ebuild:
   Move IUSE to JAVA_PKG_IUSE to allow java eclasses to handle missing
