--- a/app-i18n/poedit/ChangeLog
+++ b/app-i18n/poedit/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for app-i18n/poedit
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/poedit/ChangeLog,v 1.48 2008/01/28 16:02:36 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/poedit/ChangeLog,v 1.49 2008/03/11 03:15:07 dirtyepic Exp $
+
+*poedit-1.4 (11 Mar 2008)
+
+  11 Mar 2008; Ryan Hill <dirtyepic@gentoo.org> +poedit-1.4.ebuild:
+  Version bump.
+  
+  - fixes remaining problems with list selection
+  - takes advantage of gettext built with OpenMP support (gcc 4.2 req)
 
   28 Jan 2008; Raúl Porcel <armin76@gentoo.org> metadata.xml:
   Replace wxwindows with wxwidgets in metadata
