--- a/dev-libs/glib/ChangeLog
+++ b/dev-libs/glib/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-libs/glib
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/ChangeLog,v 1.312 2008/03/11 00:28:40 leio Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/ChangeLog,v 1.313 2008/03/11 03:27:20 leio Exp $
+
+*glib-2.16.1 (11 Mar 2008)
+
+  11 Mar 2008; Mart Raudsepp <leio@gentoo.org> -glib-2.16.0.ebuild,
+  +glib-2.16.1.ebuild:
+  Quick follow-up to fix a GIO crasher and included pcre copy version to
+  secure version
 
 *glib-2.16.0 (10 Mar 2008)
 
