--- a/dev-util/wxglade/ChangeLog
+++ b/dev-util/wxglade/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/wxglade
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/wxglade/ChangeLog,v 1.45 2008/01/28 16:11:21 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/wxglade/ChangeLog,v 1.46 2008/03/11 03:36:19 dirtyepic Exp $
+
+*wxglade-0.6.3 (11 Mar 2008)
+
+  11 Mar 2008; Ryan Hill <dirtyepic@gentoo.org>
+  +files/wxglade-0.6.3-wxversion.patch, +wxglade-0.6.3.ebuild:
+  Version bump.  Now requires wxpython-2.8.
 
   28 Jan 2008; Raúl Porcel <armin76@gentoo.org> metadata.xml:
   Replace wxwindows with wxwidgets in metadata
