--- a/x11-misc/mgm/ChangeLog
+++ b/x11-misc/mgm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/mgm
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/mgm/ChangeLog,v 1.15 2008/02/14 12:31:52 smithj Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/mgm/ChangeLog,v 1.16 2008/03/11 04:12:34 omp Exp $
+
+  11 Mar 2008; David Shakaryan <omp@gentoo.org> mgm-1.1_p14506.ebuild:
+  Small fix by desultory. :)
 
 *mgm-1.1_p14506 (14 Feb 2008)
 
