--- a/www-apps/horde-kronolith/ChangeLog
+++ b/www-apps/horde-kronolith/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-apps/horde-kronolith
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/horde-kronolith/ChangeLog,v 1.38 2008/03/10 19:31:48 fmccor Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/horde-kronolith/ChangeLog,v 1.39 2008/03/11 04:47:05 jer Exp $
+
+  11 Mar 2008; Jeroen Roovers <jer@gentoo.org> horde-kronolith-2.1.7.ebuild:
+  Stable for HPPA (bug #212635).
 
   10 Mar 2008; Ferris McCormick <fmccor@gentoo.org>
   horde-kronolith-2.1.7.ebuild:
