--- a/dev-lang/swig/ChangeLog
+++ b/dev-lang/swig/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-lang/swig
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/swig/ChangeLog,v 1.106 2008/03/02 12:28:16 hkbst Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/swig/ChangeLog,v 1.107 2008/03/11 05:10:55 ricmm Exp $
+
+  11 Mar 2008; <ricmm@gentoo.org> swig-1.3.21.ebuild, swig-1.3.25.ebuild,
+  swig-1.3.31.ebuild:
+  Drop to ~mips to match deps
 
 *swig-1.3.34 (02 Mar 2008)
 
