--- a/sys-kernel/vanilla-sources/ChangeLog
+++ b/sys-kernel/vanilla-sources/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-kernel/vanilla-sources
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/vanilla-sources/ChangeLog,v 1.434 2008/03/10 10:50:55 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/vanilla-sources/ChangeLog,v 1.435 2008/03/11 05:11:06 jer Exp $
+
+  11 Mar 2008; Jeroen Roovers <jer@gentoo.org>
+  vanilla-sources-2.6.23.17.ebuild:
+  Stable for HPPA (bug #212361).
 
 *vanilla-sources-2.6.25_rc5 (10 Mar 2008)
 
