--- a/games-strategy/freeciv/ChangeLog
+++ b/games-strategy/freeciv/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-strategy/freeciv
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-strategy/freeciv/ChangeLog,v 1.69 2008/02/26 22:47:22 tupone Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-strategy/freeciv/ChangeLog,v 1.70 2008/03/11 05:44:40 wolf31o2 Exp $
+
+  11 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org> freeciv-2.0.9.ebuild:
+  Moving to ~mips for repoman.
 
 *freeciv-2.1.3 (26 Feb 2008)
 
