--- a/games-strategy/ufo2000/ChangeLog
+++ b/games-strategy/ufo2000/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for games-strategy/ufo2000
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-strategy/ufo2000/ChangeLog,v 1.19 2007/03/12 18:13:00 genone Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-strategy/ufo2000/ChangeLog,v 1.20 2008/03/11 05:51:52 wolf31o2 Exp $
+
+  11 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org>
+  ufo2000-0.7.1062.ebuild:
+  Fix DEPEND on media-libs/dumb.
 
   12 Mar 2007; Marius Mauch <genone@gentoo.org> ufo2000-0.7.1062.ebuild:
   Replacing einfo with elog
