--- a/games-strategy/heroes3/ChangeLog
+++ b/games-strategy/heroes3/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for games-strategy/heroes3
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-strategy/heroes3/ChangeLog,v 1.17 2008/02/29 19:47:53 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-strategy/heroes3/ChangeLog,v 1.18 2008/03/11 06:05:25 wolf31o2 Exp $
+
+  11 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org>
+  -heroes3-1.3.1a-r1.ebuild, heroes3-1.3.1a-r2.ebuild:
+  Removed the older ebuild and marked the newer one stable as it's been in the
+  tree for over a year and doing some minor quoting cleanups.
 
   29 Feb 2008; Carsten Lohrke <carlo@gentoo.org> heroes3-1.3.1a-r1.ebuild,
   heroes3-1.3.1a-r2.ebuild:
