--- a/games-strategy/smac/ChangeLog
+++ b/games-strategy/smac/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-strategy/smac
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-strategy/smac/ChangeLog,v 1.13 2008/02/29 19:40:51 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-strategy/smac/ChangeLog,v 1.14 2008/03/11 06:19:56 wolf31o2 Exp $
+
+  11 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org> smac-6.0a.ebuild:
+  QA cleanup: Fix quoting.
 
   29 Feb 2008; Carsten Lohrke <carlo@gentoo.org> smac-6.0a.ebuild:
   Remove icon extension from desktop entry to match Icon Theme Specification.
