--- a/kde-base/dragonplayer/ChangeLog
+++ b/kde-base/dragonplayer/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/dragonplayer
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/dragonplayer/ChangeLog,v 1.1 2008/02/18 22:07:30 zlin Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/dragonplayer/ChangeLog,v 1.2 2008/03/11 07:55:12 robbat2 Exp $
+
+*dragonplayer-2.0.1 (10 Mar 2008)
+  
+  10 Mar 2008; Ingmar Vanhassel <ingmar@gentoo.org> dragonplayer-2.0.1.ebuild:
+  Version bump.
 
 *dragonplayer-2.0 (18 Feb 2008)
 
