--- a/dev-java/icu4j/ChangeLog
+++ b/dev-java/icu4j/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-java/icu4j
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/icu4j/ChangeLog,v 1.19 2008/01/23 11:11:13 elvanor Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/icu4j/ChangeLog,v 1.20 2008/03/11 08:52:09 elvanor Exp $
+
+*icu4j-3.8.1 (11 Mar 2008)
+
+  11 Mar 2008; Jean-Noël Rivasseau <elvanor@gentoo.org>
+  +files/icu4j-3.8.1-manifest, icu4j-3.0-r1.ebuild, icu4j-3.6.1.ebuild,
+  icu4j-3.6.1-r1.ebuild, +icu4j-3.8.1.ebuild:
+  Version bump to 3.8.1, bug #209597
 
 *icu4j-3.6.1-r1 (23 Jan 2008)
 
