--- a/app-editors/elvis/ChangeLog
+++ b/app-editors/elvis/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/elvis
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/elvis/ChangeLog,v 1.39 2008/03/09 16:34:26 fmccor Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/elvis/ChangeLog,v 1.40 2008/03/11 08:53:47 corsair Exp $
+
+  11 Mar 2008; Markus Rothe <corsair@gentoo.org> elvis-2.2.0-r3.ebuild:
+  Stable on ppc64; bug #205722
 
   09 Mar 2008; Ferris McCormick <fmccor@gentoo.org> elvis-2.2.0-r3.ebuild:
   Sparc stable --- Bug #205722 --- Thanks to Tiago Cunha for testing.
