--- a/www-client/mozilla-firefox-bin/ChangeLog
+++ b/www-client/mozilla-firefox-bin/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for www-client/mozilla-firefox-bin
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox-bin/ChangeLog,v 1.123 2008/02/18 13:49:13 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox-bin/ChangeLog,v 1.124 2008/03/11 09:53:49 armin76 Exp $
+
+*mozilla-firefox-bin-3.0_beta4 (11 Mar 2008)
+
+  11 Mar 2008; Raúl Porcel <armin76@gentoo.org>
+  +mozilla-firefox-bin-3.0_beta4.ebuild:
+  Version bump
 
   18 Feb 2008; Raúl Porcel <armin76@gentoo.org>
   -mozilla-firefox-bin-3.0_beta1.ebuild,
