--- a/app-editors/elvis/ChangeLog
+++ b/app-editors/elvis/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-editors/elvis
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/elvis/ChangeLog,v 1.40 2008/03/11 08:53:47 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/elvis/ChangeLog,v 1.41 2008/03/11 11:24:56 nelchael Exp $
+
+  11 Mar 2008; Krzysiek Pawlik <nelchael@gentoo.org> -elvis-2.2.0-r1.ebuild,
+  -elvis-2.2.0-r2.ebuild, elvis-2.2.0-r3.ebuild:
+  Remove old versions, use tc-getCC instead of gcc (see bug #213019).
 
   11 Mar 2008; Markus Rothe <corsair@gentoo.org> elvis-2.2.0-r3.ebuild:
   Stable on ppc64; bug #205722
