--- a/net-misc/networkmanager-pptp/ChangeLog
+++ b/net-misc/networkmanager-pptp/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/networkmanager-pptp
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/networkmanager-pptp/ChangeLog,v 1.2 2007/12/31 22:31:56 josejx Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/networkmanager-pptp/ChangeLog,v 1.3 2008/03/11 11:41:35 leio Exp $
+
+  11 Mar 2008; Mart Raudsepp <leio@gentoo.org>
+  networkmanager-pptp-0.1.0_p20070726.ebuild:
+  Fix build with newer intltool
 
   31 Dec 2007; Joseph Jezak <josejx@gentoo.org>
   networkmanager-pptp-0.1.0_p20070726.ebuild:
