--- a/net-libs/libsmi/ChangeLog
+++ b/net-libs/libsmi/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/libsmi
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libsmi/ChangeLog,v 1.12 2008/03/04 12:52:41 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libsmi/ChangeLog,v 1.13 2008/03/11 11:52:57 pva Exp $
+
+  11 Mar 2008; Peter Volkov <pva@gentoo.org> libsmi-0.4.7.ebuild:
+  Fixed test suite on x86 and possible on other archs too.
 
   04 Mar 2008; Raúl Porcel <armin76@gentoo.org> libsmi-0.4.7.ebuild:
   Add ~alpha wrt #212075
