--- a/net-im/mcabber/ChangeLog
+++ b/net-im/mcabber/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-im/mcabber
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/mcabber/ChangeLog,v 1.27 2008/02/10 01:55:25 wschlich Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/mcabber/ChangeLog,v 1.28 2008/03/11 12:12:15 wschlich Exp $
+
+  11 Mar 2008; Wolfram Schlich <wschlich@gentoo.org> mcabber-0.9.6.ebuild:
+  added missing pkgconfig dep wrt bug #205494
 
   10 Feb 2008; Wolfram Schlich <wschlich@gentoo.org> -mcabber-0.7.4.ebuild,
   -mcabber-0.7.6.ebuild, -mcabber-0.7.8.ebuild, -mcabber-0.8.2.ebuild,
