--- a/sci-physics/cernlib-montecarlo/ChangeLog
+++ b/sci-physics/cernlib-montecarlo/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for sci-physics/cernlib-montecarlo
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-physics/cernlib-montecarlo/ChangeLog,v 1.1 2007/08/24 21:36:03 bicatali Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-physics/cernlib-montecarlo/ChangeLog,v 1.2 2008/03/11 12:11:03 bicatali Exp $
+
+*cernlib-montecarlo-2006-r1 (11 Mar 2008)
+
+  11 Mar 2008; Sébastien Fabbro <bicatali@gentoo.org>
+  +cernlib-montecarlo-2006-r1.ebuild:
+  New series of patches from Debian, more compatible with gfortran and better
+  tests. Much ebuild cleaning.
 
 *cernlib-montecarlo-2006 (24 Aug 2007)
 
