--- a/sci-physics/cernlib/ChangeLog
+++ b/sci-physics/cernlib/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for sci-physics/cernlib
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-physics/cernlib/ChangeLog,v 1.6 2007/11/23 14:59:40 drac Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-physics/cernlib/ChangeLog,v 1.7 2008/03/11 12:09:06 bicatali Exp $
+
+*cernlib-2006-r1 (11 Mar 2008)
+
+  11 Mar 2008; Sébastien Fabbro <bicatali@gentoo.org>
+  +cernlib-2006-r1.ebuild:
+  New series of patches from Debian, more compatible with gfortran and better
+  tests. Much ebuild cleaning.
 
   23 Nov 2007; Samuli Suominen <drac@gentoo.org> cernlib-2006.ebuild:
   amd64 stable wrt #196304
