--- a/sci-physics/geant/ChangeLog
+++ b/sci-physics/geant/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for sci-physics/geant
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-physics/geant/ChangeLog,v 1.1 2007/08/24 21:43:26 bicatali Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-physics/geant/ChangeLog,v 1.2 2008/03/11 12:14:47 bicatali Exp $
+
+*geant-3.21.14-r1 (11 Mar 2008)
+
+  11 Mar 2008; Sébastien Fabbro <bicatali@gentoo.org>
+  +geant-3.21.14-r1.ebuild:
+  New series of patches from Debian, more compatible with gfortran and better
+  tests. Much ebuild cleaning.
 
 *geant-3.21.14 (24 Aug 2007)
 
