--- a/sci-physics/paw/ChangeLog
+++ b/sci-physics/paw/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for sci-physics/paw
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-physics/paw/ChangeLog,v 1.1 2007/08/24 21:38:52 bicatali Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-physics/paw/ChangeLog,v 1.2 2008/03/11 12:12:41 bicatali Exp $
+
+*paw-2.14.04-r1 (11 Mar 2008)
+
+  11 Mar 2008; Sébastien Fabbro <bicatali@gentoo.org>
+  +paw-2.14.04-r1.ebuild:
+  New series of patches from Debian, more compatible with gfortran and better
+  tests. Much ebuild cleaning.
 
 *paw-2.14.04 (24 Aug 2007)
 
