--- a/app-admin/keepassx/ChangeLog
+++ b/app-admin/keepassx/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/keepassx
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/keepassx/ChangeLog,v 1.21 2008/03/04 18:41:21 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/keepassx/ChangeLog,v 1.22 2008/03/11 12:53:52 opfer Exp $
+
+  11 Mar 2008; Christian Faulhammer <opfer@gentoo.org>
+  keepassx-0.3.0a.ebuild, keepassx-0.3.0a-r20.ebuild:
+  revamp ebuild, proposed by jokey in bug 212984
 
 *keepassx-0.3.0a-r20 (04 Mar 2008)
 *keepassx-0.3.0a (04 Mar 2008)
