--- a/app-admin/keepassx/ChangeLog
+++ b/app-admin/keepassx/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/keepassx
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/keepassx/ChangeLog,v 1.22 2008/03/11 12:53:52 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/keepassx/ChangeLog,v 1.23 2008/03/11 13:53:43 opfer Exp $
+
+  11 Mar 2008; Christian Faulhammer <opfer@gentoo.org> metadata.xml:
+  tgurr is the new maintainer
 
   11 Mar 2008; Christian Faulhammer <opfer@gentoo.org>
   keepassx-0.3.0a.ebuild, keepassx-0.3.0a-r20.ebuild:
