--- a/profiles/default-linux/ppc/ChangeLog
+++ b/profiles/default-linux/ppc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for Gentoo/ppc profile directory
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/default-linux/ppc/ChangeLog,v 1.28 2008/01/17 03:25:32 josejx Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/default-linux/ppc/ChangeLog,v 1.29 2008/03/11 14:20:18 nixnut Exp $
+
+  11 Mar 2008; nixnut <nixnut@gentoo.org> package.use.mask:
+  mask musepack for media-sound/squeezecenter
 
   17 Jan 2008; Joseph Jezak <josejx@gentoo.org> -1.0/deprecated,
   -1.0/make.defaults, -1.0/packages, -1.0/parent, -1.0/use.mask,
