--- a/sys-cluster/lam-mpi/ChangeLog
+++ b/sys-cluster/lam-mpi/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for sys-cluster/lam-mpi
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/lam-mpi/ChangeLog,v 1.65 2008/01/31 07:07:18 dberkholz Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/lam-mpi/ChangeLog,v 1.66 2008/03/11 14:34:41 jsbronder Exp $
+
+  11 Mar 2008; Justin Bronder <jsbronder@gentoo.org>
+  +files/7.1.4-as-needed.patch, lam-mpi-7.0.4.ebuild, lam-mpi-7.1.2.ebuild,
+  lam-mpi-7.1.4.ebuild:
+  Fix repoman warnings (quoting and dodoc LICENSE). Rekeyword 7.1.2 as ~sparc
+  due to dep on sys-cluster/torque. Add patch for as-needed runtime errors to
+  7.1.4 (Bug #199835)
 
   31 Jan 2008; Donnie Berkholz <dberkholz@gentoo.org>;
   -lam-mpi-7.0.6.ebuild:
