--- a/dev-util/eric/ChangeLog
+++ b/dev-util/eric/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/eric
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/eric/ChangeLog,v 1.56 2008/02/21 14:30:04 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/eric/ChangeLog,v 1.57 2008/03/11 14:44:47 jokey Exp $
+
+*eric-4.1.1 (11 Mar 2008)
+
+  11 Mar 2008; Markus Ullmann <jokey@gentoo.org> +files/4.1.1-paths.patch,
+  +eric-4.1.1.ebuild:
+  Version bump
 
   21 Feb 2008; Raúl Porcel <armin76@gentoo.org> eric-4.0.4.ebuild:
   sparc stable
