--- a/dev-libs/oniguruma/ChangeLog
+++ b/dev-libs/oniguruma/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/oniguruma
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/oniguruma/ChangeLog,v 1.35 2008/03/10 13:55:29 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/oniguruma/ChangeLog,v 1.36 2008/03/11 14:46:18 ranger Exp $
+
+  11 Mar 2008; Brent Baude <ranger@gentoo.org> oniguruma-5.9.1.ebuild:
+  Marking oniguruma-5.9.1 ppc64 for bug 211986
 
   10 Mar 2008; Samuli Suominen <drac@gentoo.org> oniguruma-5.9.1.ebuild:
   amd64 stable wrt #211986
