--- a/dev-java/commons-httpclient/ChangeLog
+++ b/dev-java/commons-httpclient/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/commons-httpclient
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-httpclient/ChangeLog,v 1.58 2008/03/08 13:09:43 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-httpclient/ChangeLog,v 1.59 2008/03/11 14:48:19 ranger Exp $
+
+  11 Mar 2008; Brent Baude <ranger@gentoo.org>
+  commons-httpclient-3.1.ebuild:
+  stable ppc64, bug 212638
 
   08 Mar 2008; Krzysiek Pawlik <nelchael@gentoo.org>
   commons-httpclient-3.1.ebuild:
