--- a/dev-java/tomcat-servlet-api/ChangeLog
+++ b/dev-java/tomcat-servlet-api/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/tomcat-servlet-api
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/tomcat-servlet-api/ChangeLog,v 1.43 2008/03/08 21:51:52 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/tomcat-servlet-api/ChangeLog,v 1.44 2008/03/11 15:02:55 ranger Exp $
+
+  11 Mar 2008; Brent Baude <ranger@gentoo.org>
+  tomcat-servlet-api-4.1.36.ebuild:
+  Marking tomcat-servlet-api-4.1.36 ppc64 for bug 212641
 
   08 Mar 2008; Markus Meier <maekke@gentoo.org>
   tomcat-servlet-api-4.1.36.ebuild:
