--- a/java-virtuals/servlet-api/ChangeLog
+++ b/java-virtuals/servlet-api/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for java-virtuals/servlet-api
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/java-virtuals/servlet-api/ChangeLog,v 1.7 2008/03/08 21:54:31 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/java-virtuals/servlet-api/ChangeLog,v 1.8 2008/03/11 15:03:59 ranger Exp $
+
+  11 Mar 2008; Brent Baude <ranger@gentoo.org> servlet-api-2.3.ebuild:
+  Marking servlet-api-2.3 ppc64 for bug 212641
 
   08 Mar 2008; Markus Meier <maekke@gentoo.org> servlet-api-2.3.ebuild:
   x86 stable, bug #212641
