--- a/dev-java/eclipse-ecj/ChangeLog
+++ b/dev-java/eclipse-ecj/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/eclipse-ecj
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/eclipse-ecj/ChangeLog,v 1.38 2008/03/08 13:26:02 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/eclipse-ecj/ChangeLog,v 1.39 2008/03/11 15:09:14 ranger Exp $
+
+  11 Mar 2008; Brent Baude <ranger@gentoo.org> eclipse-ecj-3.2.2.ebuild:
+  stable ppc64, bug 212643
 
   08 Mar 2008; Krzysiek Pawlik <nelchael@gentoo.org>
   eclipse-ecj-3.2.2.ebuild:
