--- a/dev-java/tagsoup/ChangeLog
+++ b/dev-java/tagsoup/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/tagsoup
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/tagsoup/ChangeLog,v 1.31 2008/03/09 23:44:00 ken69267 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/tagsoup/ChangeLog,v 1.32 2008/03/11 15:10:07 ranger Exp $
+
+  11 Mar 2008; Brent Baude <ranger@gentoo.org> tagsoup-1.2.ebuild:
+  stable ppc64, bug 212662
 
   09 Mar 2008; Kenneth Prugh <ken69267@gentoo.org> tagsoup-1.2.ebuild:
   amd64 stable, bug #212662
