--- a/dev-java/xom/ChangeLog
+++ b/dev-java/xom/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/xom
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/xom/ChangeLog,v 1.47 2008/03/10 22:41:07 ken69267 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/xom/ChangeLog,v 1.48 2008/03/11 15:13:16 ranger Exp $
+
+  11 Mar 2008; Brent Baude <ranger@gentoo.org> xom-1.0-r6.ebuild:
+  stable ppc64, bug 212665
 
   10 Mar 2008; Kenneth Prugh <ken69267@gentoo.org> xom-1.0-r6.ebuild:
   amd64 stable, bug #212665
