--- a/dev-java/jsch/ChangeLog
+++ b/dev-java/jsch/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/jsch
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jsch/ChangeLog,v 1.62 2008/03/08 17:13:31 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jsch/ChangeLog,v 1.63 2008/03/11 15:16:09 ranger Exp $
+
+  11 Mar 2008; Brent Baude <ranger@gentoo.org> jsch-0.1.37.ebuild:
+  stable ppc64, bug 212654
 
   08 Mar 2008; Markus Meier <maekke@gentoo.org> jsch-0.1.37.ebuild:
   x86 stable, bug #212654
