--- a/dev-java/sun-javamail/ChangeLog
+++ b/dev-java/sun-javamail/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/sun-javamail
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-javamail/ChangeLog,v 1.16 2008/03/08 20:37:24 wltjr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-javamail/ChangeLog,v 1.17 2008/03/11 15:16:59 ranger Exp $
+
+  11 Mar 2008; Brent Baude <ranger@gentoo.org> sun-javamail-1.4.1.ebuild:
+  stable ppc64, bug 212658
 
   08 Mar 2008; William L. Thomson Jr. <wltjr@gentoo.org>
   sun-javamail-1.4.1.ebuild:
