Add empty src_test to overwrite the upcoming generic src_test. Package-Manager: portage-2.1.4.4

--- a/dev-java/xsom/ChangeLog
+++ b/dev-java/xsom/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/xsom
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/xsom/ChangeLog,v 1.6 2007/08/19 18:29:30 wltjr Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/xsom/ChangeLog,v 1.7 2008/03/11 19:49:41 betelgeuse Exp $
+
+  11 Mar 2008; Petteri Räty <betelgeuse@gentoo.org> xsom-20060901.ebuild:
+  Add empty src_test to overwrite the upcoming generic src_test.
 
   19 Aug 2007; William L. Thomson Jr. <wltjr@gentoo.org>
   xsom-20060901.ebuild:
