--- a/dev-libs/xapian/ChangeLog
+++ b/dev-libs/xapian/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/xapian
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/xapian/ChangeLog,v 1.87 2012/09/19 09:41:40 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/xapian/ChangeLog,v 1.88 2012/10/02 22:46:46 blueness Exp $
+
+  02 Oct 2012; Anthony G. Basile <blueness@gentoo.org> -xapian-1.2.10.ebuild,
+  -xapian-1.2.5.ebuild, -xapian-1.2.8.ebuild, -xapian-1.2.9.ebuild:
+  Remove older versions
 
   19 Sep 2012; Johannes Huber <johu@gentoo.org> xapian-1.2.12.ebuild:
   Stable for x86, wrt bug #434564
