--- a/app-office/dia2code/ChangeLog
+++ b/app-office/dia2code/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-office/dia2code
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/dia2code/ChangeLog,v 1.21 2012/09/15 12:22:55 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/dia2code/ChangeLog,v 1.22 2012/10/03 10:27:51 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> dia2code-0.8.4.ebuild:
+  x86 stable wrt bug #427544
 
 *dia2code-0.8.5 (15 Sep 2012)
 
