--- a/app-office/grisbi/ChangeLog
+++ b/app-office/grisbi/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-office/grisbi
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/grisbi/ChangeLog,v 1.58 2012/07/08 15:23:11 remi Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/grisbi/ChangeLog,v 1.59 2012/10/03 10:28:20 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> grisbi-0.8.9-r1.ebuild:
+  x86 stable wrt bug #427544
 
 *grisbi-0.8.9-r1 (08 Jul 2012)
 
