--- a/app-office/gtimelog/ChangeLog
+++ b/app-office/gtimelog/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-office/gtimelog
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/gtimelog/ChangeLog,v 1.5 2012/09/15 11:30:03 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/gtimelog/ChangeLog,v 1.6 2012/10/03 10:28:42 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> gtimelog-0.7.1.ebuild:
+  x86 stable wrt bug #427544
 
 *gtimelog-0.8.0 (15 Sep 2012)
 
